<resources>
    <string name="app_name">WanAndroid</string>
    <string name="app_name_rocket">RocketAndroid</string>

    <string name="common_click_double_to_exit_app">再按一次退出应用~</string>
    <string name="login_error_grant_refused">当前账号在别处设备登录，请注意账号使用安全</string>

    <string name="guide_skip">不要惦记我</string>
    <string name="guide_next">下一步</string>
    <string name="guide_done">完成</string>

    <string name="main_tab_home">首页</string>
    <string name="main_tab_latest_project">项目</string>
    <string name="main_tab_system">体系</string>
    <string name="main_tab_nav">导航</string>

    <string name="nv_item_blog">公众号</string>
    <string name="nv_item_type">项目分类</string>
    <string name="nv_item_util">工具</string>
    <string name="nv_item_collection">收藏</string>
    <string name="nv_item_girls">美女福利</string>
    <string name="nv_item_setting">设置</string>
    <string name="nv_item_about">关于</string>
    <string name="nv_item_test">调试</string>
    <string name="nv_item_puzzle">拼图游戏</string>
    <string name="nv_item_custom_view">自定义View</string>
    <string name="nv_item_logout">退出登录</string>

    <string name="name_default">未登录</string>
    <string name="github">https://github.com/jackyHuangH</string>
    <string name="common_no_data">暂时没有数据</string>
    <string name="back_to_top">回到顶部</string>
    <string name="browser_is_loading">加载中…</string>
    <string name="test_string">归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个
        归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个
        归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感
        家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归
        属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个归属感家个</string>

    <string name="login_hint_name">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="login_bt_login">登录</string>
    <string name="login_bt_register">注册</string>
    <string name="login_error_name_empty">用户名不能为空</string>
    <string name="login_error_password_empty">密码不能为空</string>
    <string name="login_doing_login">正在登录…</string>
    <string name="login_doing_register">正在注册…</string>
    <string name="login_login_success">登录成功！</string>
    <string name="login_register_success">注册成功,请登录！</string>

    <string name="my_collect_title">我的收藏</string>
    <string name="about_license">开源协议</string>
    <string name="about_source_url">源代码地址</string>
    <string name="about_feedback">意见反馈</string>
    <string name="about_third_lib">第三方库</string>
    <string name="about_developer">开发者</string>
    <string name="about_title">关于</string>

    <string name="feedback_issue">提交Issue</string>
    <string name="feedback_send_email">发送邮件</string>
    <string name="send_email_to">mailto:huangzijie0319@gmail.com</string>
    <string name="mail_topic">WanAndroid 反馈</string>
    <string name="search_hint">请输入搜索关键字</string>
    <string name="search_common_website">常用网站</string>
    <string name="search_hot_words">大家都在搜</string>

    <string name="girl_title">福利</string>
    <string name="package_name">包名</string>

    <string name="setting_title">设置</string>
    <string name="setting_language">语言</string>
    <string name="setting_theme">主题</string>
    <string name="setting_change_icon">更换Logo</string>
    <string name="setting_theme_not_support">抱歉，您的系统版本低于Android Q，无法更改主题模式！</string>

    <string name="home_article_tag_top">置顶</string>
    <string name="home_article_tag_new">新</string>
</resources>
