<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/ll_title"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibt_back"
                android:layout_width="?attr/actionBarSize"
                android:src="@drawable/ic_arrow_back"
                android:background="@null"
                android:layout_height="match_parent"/>

        <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:background="@drawable/shape_search_bg"
                android:layout_width="0dp"
                android:imeOptions="actionSearch"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/color_282828"
                android:textColorHint="@color/color_999999"
                android:hint="@string/search_hint"
                android:layout_weight="1"
                android:textSize="14sp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="8dp"
                android:layout_height="match_parent"/>
    </LinearLayout>

    <ScrollView
            android:id="@+id/scroll_view"
            app:layout_constraintTop_toBottomOf="@+id/ll_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            app:layout_constraintVertical_weight="1"
            android:layout_height="0dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/search_hot_words"
                    android:textSize="16sp"/>

            <com.zhy.view.flowlayout.TagFlowLayout
                    android:id="@+id/hot_tagLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:max_select="1"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/search_common_website"
                    android:textSize="16sp"/>

            <com.zhy.view.flowlayout.TagFlowLayout
                    android:id="@+id/web_tagLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:max_select="1"/>

        </LinearLayout>
    </ScrollView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            app:layout_constraintTop_toBottomOf="@+id/ll_title"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:visibility="gone"
            app:layout_constraintVertical_weight="1"
            android:layout_height="0dp">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rlv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>